--- a/combinationChart.html
+++ b/combinationChart.html
@@ -28,6 +28,12 @@
 
      var chart = new google.visualization.ComboChart(document.getElementById('container'));
      chart.draw(data, options);
+   
+     <!-- This block produces an alert box when a data point is clicked -->
+     google.visualization.events.addListener(chart, 'select', selectHandler);
+     function selectHandler(e){
+       alert(data.getValue(chart.getSelection()[0].row, 0));
+     };
   }
   google.charts.setOnLoadCallback(drawChart);
 </script>
